--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!-- Profile Page -->
             <div class="page" id="profilePage">
                 <div class="profile-header-simple">
-                    <span class="profile-greeting">Саламатсызбы! 👋</span>
+                    <span class="profile-greeting">Добрый день! 👋</span>
                 </div>
                 <div class="profile-menu">
                     <div class="menu-item" onclick="openAddresses()">
@@ -272,7 +272,7 @@
             <div class="success-icon">✅</div>
             <h2>Заказ оформлен!</h2>
             <p>Мы свяжемся с вами в ближайшее время</p>
-            <button class="success-btn" onclick="closeSuccess()">Рахмат! 🙏</button>
+            <button class="success-btn" onclick="closeSuccess()">Отлично!</button>
         </div>
     </div>
 
